<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="90%"
        />

    <RadioGroup
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:layout_below="@id/fragment_container"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:layout_heightPercent="10%"
        >
        <RadioButton
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_tab_home"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_home"
            android:button="@null"
            android:background="@null"
            />
        <RadioButton
            android:id="@+id/tab_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_tab_discover"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_discover"
            android:button="@null"
            android:background="@null"
            />

        <RadioButton
            android:id="@+id/tab_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_tab_add"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_add"
            android:button="@null"
            android:background="@null"
            />

        <RadioButton
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_tab_message"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_message"
            android:button="@null"
            android:background="@null"
            />
        <RadioButton
            android:id="@+id/tab_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/string_tab_account"
            android:textColor="@color/tab_text_color"
            android:textSize="12sp"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_account"
            android:button="@null"
            android:background="@null"
            />

    </RadioGroup>

</android.support.percent.PercentRelativeLayout>